--- a/globusgalaxyops/notebooks/compareToLocal.ipynb
+++ b/globusgalaxyops/notebooks/compareToLocal.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:40de1311c87b570e6fb904e7e717af1886a0d753dd2822f55eacc36c7c30dcdc"
+  "signature": "sha256:eabe3e8c114d253604f592e4ea111de1a2b5068c3dcb0219963d7c238baf7311"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -155,7 +155,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 17
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -239,6 +239,7 @@
       "    \n",
       "    def get_file_list(self, file_tag):\n",
       "        \n",
+      "        file_tag += '$'\n",
       "        file_list = [ os.path.join(dp, f) \\\n",
       "                      for dp,dn,fn in os.walk(self.dir) \\\n",
       "                      for f in fn \\\n",
@@ -304,7 +305,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 38
+     "prompt_number": 28
     },
     {
      "cell_type": "code",
@@ -319,7 +320,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 39
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -345,7 +346,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 40
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -357,7 +358,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 42
+     "prompt_number": 29
     },
     {
      "cell_type": "code",
@@ -374,80 +375,30 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def get_file_list(proj_dir, file_tag):\n",
-      "    file_list = [ os.path.join(dp, f) \\\n",
-      "                  for dp,dn,fn in os.walk(proj_dir) \\\n",
-      "                  for f in fn \\\n",
-      "                  if re.search(file_tag, f)]\n",
-      "    return file_list"
+      "project = re.search('P[0-9]+\\-[0-9]+', local_dir).group()\n",
+      "out_dir = \"../data/\"\n",
+      "source = \"local\"\n",
+      "out_tag = project + '_' + source\n",
+      "out_path = os.path.join(out_dir, out_tag)\n",
+      "\n",
+      "# fsc.write_file_stat_dict(out_path)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "fsc = FileStatsCollector(proj_dir)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 32
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
+      "fsc = FileStatsCollector(local_dir)\n",
       "fsc.build_file_stat_dict()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 33
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "fsc.fsd"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 34,
-       "text": [
-        "{'lib6825_C6VG0ANXX': {'fasta_lines': 20765, 'fasta_size': 1236147},\n",
-        " 'lib6826_C6VG0ANXX': {'fasta_lines': 16842, 'fasta_size': 1001037},\n",
-        " 'lib6827_C6VG0ANXX': {'fasta_lines': 23992, 'fasta_size': 1423927},\n",
-        " 'lib6828_C6VG0ANXX': {'fasta_lines': 23386, 'fasta_size': 1391223},\n",
-        " 'lib6829_C6VG0ANXX': {'fasta_lines': 32737, 'fasta_size': 1939219},\n",
-        " 'lib6830_C6VG0ANXX': {'fasta_lines': 766, 'fasta_size': 45042},\n",
-        " 'lib6831_C6VG0ANXX': {'fasta_lines': 20261, 'fasta_size': 1196446},\n",
-        " 'lib6832_C6VG0ANXX': {'fasta_lines': 19739, 'fasta_size': 1172699},\n",
-        " 'lib6833_C6VG0ANXX': {'fasta_lines': 27300, 'fasta_size': 1631967},\n",
-        " 'lib6834_C6VG0ANXX': {'fasta_lines': 15601, 'fasta_size': 935185},\n",
-        " 'lib6835_C6VG0ANXX': {'fasta_lines': 19182, 'fasta_size': 1136701},\n",
-        " 'lib6836_C6VG0ANXX': {'fasta_lines': 20631, 'fasta_size': 1225168},\n",
-        " 'lib6837_C6VG0ANXX': {'fasta_lines': 19284, 'fasta_size': 1142600},\n",
-        " 'lib6838_C6VG0ANXX': {'fasta_lines': 14385, 'fasta_size': 861719},\n",
-        " 'lib6839_C6VG0ANXX': {'fasta_lines': 733, 'fasta_size': 44684},\n",
-        " 'lib6840_C6VG0ANXX': {'fasta_lines': 13021, 'fasta_size': 776543},\n",
-        " 'lib6841_C6VG0ANXX': {'fasta_lines': 11955, 'fasta_size': 714992},\n",
-        " 'lib6842_C6VG0ANXX': {'fasta_lines': 16076, 'fasta_size': 959324},\n",
-        " 'lib6922_C6VG0ANXX': {'fasta_lines': 19606, 'fasta_size': 1160911},\n",
-        " 'lib6923_C6VG0ANXX': {'fasta_lines': 24302, 'fasta_size': 1435901},\n",
-        " 'lib6924_C6VG0ANXX': {'fasta_lines': 27902, 'fasta_size': 1651124},\n",
-        " 'lib6925_C6VG0ANXX': {'fasta_lines': 42669, 'fasta_size': 2525094}}"
-       ]
-      }
-     ],
-     "prompt_number": 34
+     "prompt_number": 26
     },
     {
      "cell_type": "code",
@@ -465,120 +416,120 @@
         "  <thead>\n",
         "    <tr style=\"text-align: right;\">\n",
         "      <th></th>\n",
-        "      <th>fasta_lines</th>\n",
-        "      <th>fasta_size</th>\n",
+        "      <th>bam_lines</th>\n",
+        "      <th>bam_size</th>\n",
         "    </tr>\n",
         "  </thead>\n",
         "  <tbody>\n",
         "    <tr>\n",
         "      <th>lib6825_C6VG0ANXX</th>\n",
-        "      <td>20765</td>\n",
-        "      <td>1236147</td>\n",
+        "      <td>470657</td>\n",
+        "      <td>110974144</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>lib6826_C6VG0ANXX</th>\n",
-        "      <td>16842</td>\n",
-        "      <td>1001037</td>\n",
+        "      <td>470106</td>\n",
+        "      <td>112019863</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>lib6827_C6VG0ANXX</th>\n",
-        "      <td>23992</td>\n",
-        "      <td>1423927</td>\n",
+        "      <td>431633</td>\n",
+        "      <td>102329750</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>lib6828_C6VG0ANXX</th>\n",
-        "      <td>23386</td>\n",
-        "      <td>1391223</td>\n",
+        "      <td>454959</td>\n",
+        "      <td>107851056</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>lib6829_C6VG0ANXX</th>\n",
-        "      <td>32737</td>\n",
-        "      <td>1939219</td>\n",
+        "      <td>580928</td>\n",
+        "      <td>137696694</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>lib6830_C6VG0ANXX</th>\n",
-        "      <td>766</td>\n",
-        "      <td>45042</td>\n",
+        "      <td>24850</td>\n",
+        "      <td>6019071</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>lib6831_C6VG0ANXX</th>\n",
-        "      <td>20261</td>\n",
-        "      <td>1196446</td>\n",
+        "      <td>538690</td>\n",
+        "      <td>126391434</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>lib6832_C6VG0ANXX</th>\n",
-        "      <td>19739</td>\n",
-        "      <td>1172699</td>\n",
+        "      <td>551447</td>\n",
+        "      <td>129841046</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>lib6833_C6VG0ANXX</th>\n",
-        "      <td>27300</td>\n",
-        "      <td>1631967</td>\n",
+        "      <td>577266</td>\n",
+        "      <td>135483198</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>lib6834_C6VG0ANXX</th>\n",
-        "      <td>15601</td>\n",
-        "      <td>935185</td>\n",
+        "      <td>370102</td>\n",
+        "      <td>86722915</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>lib6835_C6VG0ANXX</th>\n",
-        "      <td>19182</td>\n",
-        "      <td>1136701</td>\n",
+        "      <td>416677</td>\n",
+        "      <td>98175791</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>lib6836_C6VG0ANXX</th>\n",
-        "      <td>20631</td>\n",
-        "      <td>1225168</td>\n",
+        "      <td>392114</td>\n",
+        "      <td>92999274</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>lib6837_C6VG0ANXX</th>\n",
-        "      <td>19284</td>\n",
-        "      <td>1142600</td>\n",
+        "      <td>409109</td>\n",
+        "      <td>96969784</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>lib6838_C6VG0ANXX</th>\n",
-        "      <td>14385</td>\n",
-        "      <td>861719</td>\n",
+        "      <td>361544</td>\n",
+        "      <td>84941406</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>lib6839_C6VG0ANXX</th>\n",
-        "      <td>733</td>\n",
-        "      <td>44684</td>\n",
+        "      <td>23549</td>\n",
+        "      <td>5617949</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>lib6840_C6VG0ANXX</th>\n",
-        "      <td>13021</td>\n",
-        "      <td>776543</td>\n",
+        "      <td>403457</td>\n",
+        "      <td>93785356</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>lib6841_C6VG0ANXX</th>\n",
-        "      <td>11955</td>\n",
-        "      <td>714992</td>\n",
+        "      <td>409904</td>\n",
+        "      <td>95580769</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>lib6842_C6VG0ANXX</th>\n",
-        "      <td>16076</td>\n",
-        "      <td>959324</td>\n",
+        "      <td>396283</td>\n",
+        "      <td>92853457</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>lib6922_C6VG0ANXX</th>\n",
-        "      <td>19606</td>\n",
-        "      <td>1160911</td>\n",
+        "      <td>353420</td>\n",
+        "      <td>83367653</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>lib6923_C6VG0ANXX</th>\n",
-        "      <td>24302</td>\n",
-        "      <td>1435901</td>\n",
+        "      <td>335966</td>\n",
+        "      <td>80291971</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>lib6924_C6VG0ANXX</th>\n",
-        "      <td>27902</td>\n",
-        "      <td>1651124</td>\n",
+        "      <td>443877</td>\n",
+        "      <td>105241065</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>lib6925_C6VG0ANXX</th>\n",
-        "      <td>42669</td>\n",
-        "      <td>2525094</td>\n",
+        "      <td>480454</td>\n",
+        "      <td>114992576</td>\n",
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
@@ -586,35 +537,35 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 36,
+       "prompt_number": 27,
        "text": [
-        "                   fasta_lines  fasta_size\n",
-        "lib6825_C6VG0ANXX        20765     1236147\n",
-        "lib6826_C6VG0ANXX        16842     1001037\n",
-        "lib6827_C6VG0ANXX        23992     1423927\n",
-        "lib6828_C6VG0ANXX        23386     1391223\n",
-        "lib6829_C6VG0ANXX        32737     1939219\n",
-        "lib6830_C6VG0ANXX          766       45042\n",
-        "lib6831_C6VG0ANXX        20261     1196446\n",
-        "lib6832_C6VG0ANXX        19739     1172699\n",
-        "lib6833_C6VG0ANXX        27300     1631967\n",
-        "lib6834_C6VG0ANXX        15601      935185\n",
-        "lib6835_C6VG0ANXX        19182     1136701\n",
-        "lib6836_C6VG0ANXX        20631     1225168\n",
-        "lib6837_C6VG0ANXX        19284     1142600\n",
-        "lib6838_C6VG0ANXX        14385      861719\n",
-        "lib6839_C6VG0ANXX          733       44684\n",
-        "lib6840_C6VG0ANXX        13021      776543\n",
-        "lib6841_C6VG0ANXX        11955      714992\n",
-        "lib6842_C6VG0ANXX        16076      959324\n",
-        "lib6922_C6VG0ANXX        19606     1160911\n",
-        "lib6923_C6VG0ANXX        24302     1435901\n",
-        "lib6924_C6VG0ANXX        27902     1651124\n",
-        "lib6925_C6VG0ANXX        42669     2525094"
+        "                   bam_lines   bam_size\n",
+        "lib6825_C6VG0ANXX     470657  110974144\n",
+        "lib6826_C6VG0ANXX     470106  112019863\n",
+        "lib6827_C6VG0ANXX     431633  102329750\n",
+        "lib6828_C6VG0ANXX     454959  107851056\n",
+        "lib6829_C6VG0ANXX     580928  137696694\n",
+        "lib6830_C6VG0ANXX      24850    6019071\n",
+        "lib6831_C6VG0ANXX     538690  126391434\n",
+        "lib6832_C6VG0ANXX     551447  129841046\n",
+        "lib6833_C6VG0ANXX     577266  135483198\n",
+        "lib6834_C6VG0ANXX     370102   86722915\n",
+        "lib6835_C6VG0ANXX     416677   98175791\n",
+        "lib6836_C6VG0ANXX     392114   92999274\n",
+        "lib6837_C6VG0ANXX     409109   96969784\n",
+        "lib6838_C6VG0ANXX     361544   84941406\n",
+        "lib6839_C6VG0ANXX      23549    5617949\n",
+        "lib6840_C6VG0ANXX     403457   93785356\n",
+        "lib6841_C6VG0ANXX     409904   95580769\n",
+        "lib6842_C6VG0ANXX     396283   92853457\n",
+        "lib6922_C6VG0ANXX     353420   83367653\n",
+        "lib6923_C6VG0ANXX     335966   80291971\n",
+        "lib6924_C6VG0ANXX     443877  105241065\n",
+        "lib6925_C6VG0ANXX     480454  114992576"
        ]
       }
      ],
-     "prompt_number": 36
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
