added functions to count number of records in bio data files

--- a/globusgalaxyops/notebooks/compareToLocal.ipynb
+++ b/globusgalaxyops/notebooks/compareToLocal.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:eabe3e8c114d253604f592e4ea111de1a2b5068c3dcb0219963d7c238baf7311"
+  "signature": "sha256:29a08d4ff7c8bbaa4db2012b2996bb58ce3ceeeed2a42f8c3e59dfdbb106a1e4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -15,12 +15,14 @@
       "import os, sys, re, zipfile, csv\n",
       "from pprint import pprint\n",
       "from bs4 import BeautifulSoup\n",
+      "import pysam\n",
+      "from Bio import SeqIO\n",
       "import pandas as pd\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 30
     },
     {
      "cell_type": "code",
@@ -268,7 +270,25 @@
       "        file_size = os.stat(filename).st_size \n",
       "        \n",
       "        return file_size\n",
+      "    \n",
+      "    def count_bam_records(self, bam_file):\n",
+      "        bam_records = list(pysam.AlignmentFile(bam_file, 'rb'))\n",
       "\n",
+      "        return len(bam_records)\n",
+      "    \n",
+      "    def count_fasta_records(self, fasta_file):\n",
+      "        handle = open(fasta_file, \"rU\")\n",
+      "        fasta_records = list(SeqIO.parse(handle, \"fasta\"))\n",
+      "        handle.close()\n",
+      "\n",
+      "        return len(fasta_records)\n",
+      "\n",
+      "    def count_fastq_records(self, fastq_file):\n",
+      "        handle = open(fastq_file, \"rU\")\n",
+      "        fasta_records = list(SeqIO.parse(handle, \"fasta\"))\n",
+      "        handle.close()\n",
+      "\n",
+      "        return len(fasta_records)\n",
       "\n",
       "    def build_file_stat_dict(self):\n",
       "\n",
@@ -289,6 +309,16 @@
       "\n",
       "                    file_stat_dict[lib][ft + '_lines'] = self.bufcount(f)\n",
       "                    file_stat_dict[lib][ft + '_size'] = self.get_size(f)\n",
+      "                    \n",
+      "                    if ft == 'bam':\n",
+      "                        file_stat_dict[lib][ft + '_records'] = self.count_bam_records(f)\n",
+      "\n",
+      "                    elif ft == 'fasta':\n",
+      "                        file_stat_dict[lib][ft + '_records'] = self.count_fasta_records(f)\n",
+      "                        \n",
+      "                    elif ft == 'fastq':\n",
+      "                        file_stat_dict[lib][ft + '_records'] = self.count_fastq_records(f)\n",
+      "\n",
       "        \n",
       "        self.fsd = file_stat_dict\n",
       "        \n",
@@ -305,7 +335,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 28
+     "prompt_number": 57
     },
     {
      "cell_type": "code",
@@ -358,7 +388,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 29
+     "prompt_number": 58
     },
     {
      "cell_type": "code",
@@ -570,7 +600,96 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "test_bam = fsc.get_file_list('bam')[0]\n",
+      "test_fasta = fsc.get_file_list('fasta')[0]\n",
+      "test_fastq = fsc.get_file_list('fastq')[0]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 38
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def count_bam_records(bam_file):\n",
+      "    bam_records = list(pysam.AlignmentFile(bam_file, 'rb'))\n",
+      "\n",
+      "    return len(bam_records)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 54
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "read_alignments(test_bam)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "175577\n"
+       ]
+      }
+     ],
+     "prompt_number": 55
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def count_fasta_records(fasta_file):\n",
+      "    handle = open(fasta_file, \"rU\")\n",
+      "    fasta_records = list(SeqIO.parse(handle, \"fasta\"))\n",
+      "    handle.close()\n",
+      "    \n",
+      "    return = len(fasta_records)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 37
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "len(read_fasta(test_fasta))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 39,
+       "text": [
+        "2619"
+       ]
+      }
+     ],
+     "prompt_number": 39
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def count_fastq_records(fastq_file):\n",
+      "    handle = open(fastq_file, \"rU\")\n",
+      "    fasta_records = list(SeqIO.parse(handle, \"fasta\"))\n",
+      "    handle.close()\n",
+      "\n",
+      "    return len(fasta_records)"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
