ran on latest test batches

--- a/globusgalaxyops/notebooks/check_globus_outputs.ipynb
+++ b/globusgalaxyops/notebooks/check_globus_outputs.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f11265fcf4551cf035179756dbf3a5c25b1a3fe781c3eaf2923046253927e552"
+  "signature": "sha256:f4205cfeee21ad3ba12158613fa00e9d7fa52be902b4206e202270b4c83f4235"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -80,7 +80,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 16
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -129,7 +129,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 79
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -154,7 +154,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 85
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -163,12 +163,17 @@
       "missing_all = []\n",
       "empty_all = []\n",
       "\n",
-      "project_dir = \"/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P14-12Processed_151124/\"\n",
+      "project_dir = \"/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_151217/\"\n",
       "missing,empty = check_outputs(project_dir)\n",
       "missing_all += missing\n",
       "empty_all += empty\n",
       "\n",
-      "project_dir = \"/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P109-1Processed_151124/\"\n",
+      "project_dir = \"/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_151218/\"\n",
+      "missing,empty = check_outputs(project_dir)\n",
+      "missing_all += missing\n",
+      "empty_all += empty\n",
+      "\n",
+      "project_dir = \"/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P109-1Processed_151218/\"\n",
       "missing,empty = check_outputs(project_dir)\n",
       "missing_all += missing\n",
       "empty_all += empty\n",
@@ -194,11 +199,11 @@
        "stream": "stdout",
        "text": [
         "[]\n",
-        "['genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P14-12Processed_151124/metrics/lib7333_C6VG0ANXX_picard_rnaseq_metrics.html', 'genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P109-1Processed_151124/metrics/lib6613_C6VG0ANXX_picard_rnaseq_metrics.html']\n"
+        "[]\n"
        ]
       }
      ],
-     "prompt_number": 92
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
