--- a/globusgalaxyops/notebooks/compareToLocal.ipynb
+++ b/globusgalaxyops/notebooks/compareToLocal.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:29a08d4ff7c8bbaa4db2012b2996bb58ce3ceeeed2a42f8c3e59dfdbb106a1e4"
+  "signature": "sha256:d3616194cb396cd9b1a4b7e2211404504165cd4f65152499fb532c6960ccb979"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -22,7 +22,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 30
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -285,20 +285,20 @@
       "\n",
       "    def count_fastq_records(self, fastq_file):\n",
       "        handle = open(fastq_file, \"rU\")\n",
-      "        fasta_records = list(SeqIO.parse(handle, \"fasta\"))\n",
+      "        fastq_records = list(SeqIO.parse(handle, \"fastq\"))\n",
       "        handle.close()\n",
       "\n",
-      "        return len(fasta_records)\n",
+      "        return len(fastq_records)\n",
       "\n",
       "    def build_file_stat_dict(self):\n",
       "\n",
       "        file_type_list = ['fasta', 'fastq', 'bam']\n",
-      "\n",
       "            \n",
       "        file_stat_dict = {}\n",
       "        for ft in file_type_list:\n",
       "            \n",
       "            file_list = self.get_file_list(ft)\n",
+      "            file_list = [ f for f in file_list if 'noDups' not in f ]\n",
       "            for f in file_list:\n",
       "            \n",
       "                if not 'combined' in f:\n",
@@ -335,7 +335,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 57
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
@@ -350,7 +350,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -376,7 +376,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 23
     },
     {
      "cell_type": "code",
@@ -388,7 +388,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 58
+     "prompt_number": 24
     },
     {
      "cell_type": "code",
@@ -416,283 +416,59 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "fsc = FileStatsCollector(local_dir)\n",
-      "fsc.build_file_stat_dict()"
+      "fsc = FileStatsCollector(local_dir)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 26
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "pd.DataFrame(fsc.fsd).transpose()"
+      "file_list = fsc.get_file_list('fastq')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 18
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "test_fastq = file_list[0]\n",
+      "test_fastq"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "html": [
-        "<div style=\"max-width:1500px;overflow:auto;\">\n",
-        "<table border=\"1\" class=\"dataframe\">\n",
-        "  <thead>\n",
-        "    <tr style=\"text-align: right;\">\n",
-        "      <th></th>\n",
-        "      <th>bam_lines</th>\n",
-        "      <th>bam_size</th>\n",
-        "    </tr>\n",
-        "  </thead>\n",
-        "  <tbody>\n",
-        "    <tr>\n",
-        "      <th>lib6825_C6VG0ANXX</th>\n",
-        "      <td>470657</td>\n",
-        "      <td>110974144</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>lib6826_C6VG0ANXX</th>\n",
-        "      <td>470106</td>\n",
-        "      <td>112019863</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>lib6827_C6VG0ANXX</th>\n",
-        "      <td>431633</td>\n",
-        "      <td>102329750</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>lib6828_C6VG0ANXX</th>\n",
-        "      <td>454959</td>\n",
-        "      <td>107851056</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>lib6829_C6VG0ANXX</th>\n",
-        "      <td>580928</td>\n",
-        "      <td>137696694</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>lib6830_C6VG0ANXX</th>\n",
-        "      <td>24850</td>\n",
-        "      <td>6019071</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>lib6831_C6VG0ANXX</th>\n",
-        "      <td>538690</td>\n",
-        "      <td>126391434</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>lib6832_C6VG0ANXX</th>\n",
-        "      <td>551447</td>\n",
-        "      <td>129841046</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>lib6833_C6VG0ANXX</th>\n",
-        "      <td>577266</td>\n",
-        "      <td>135483198</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>lib6834_C6VG0ANXX</th>\n",
-        "      <td>370102</td>\n",
-        "      <td>86722915</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>lib6835_C6VG0ANXX</th>\n",
-        "      <td>416677</td>\n",
-        "      <td>98175791</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>lib6836_C6VG0ANXX</th>\n",
-        "      <td>392114</td>\n",
-        "      <td>92999274</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>lib6837_C6VG0ANXX</th>\n",
-        "      <td>409109</td>\n",
-        "      <td>96969784</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>lib6838_C6VG0ANXX</th>\n",
-        "      <td>361544</td>\n",
-        "      <td>84941406</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>lib6839_C6VG0ANXX</th>\n",
-        "      <td>23549</td>\n",
-        "      <td>5617949</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>lib6840_C6VG0ANXX</th>\n",
-        "      <td>403457</td>\n",
-        "      <td>93785356</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>lib6841_C6VG0ANXX</th>\n",
-        "      <td>409904</td>\n",
-        "      <td>95580769</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>lib6842_C6VG0ANXX</th>\n",
-        "      <td>396283</td>\n",
-        "      <td>92853457</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>lib6922_C6VG0ANXX</th>\n",
-        "      <td>353420</td>\n",
-        "      <td>83367653</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>lib6923_C6VG0ANXX</th>\n",
-        "      <td>335966</td>\n",
-        "      <td>80291971</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>lib6924_C6VG0ANXX</th>\n",
-        "      <td>443877</td>\n",
-        "      <td>105241065</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>lib6925_C6VG0ANXX</th>\n",
-        "      <td>480454</td>\n",
-        "      <td>114992576</td>\n",
-        "    </tr>\n",
-        "  </tbody>\n",
-        "</table>\n",
-        "</div>"
-       ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 27,
+       "prompt_number": 21,
        "text": [
-        "                   bam_lines   bam_size\n",
-        "lib6825_C6VG0ANXX     470657  110974144\n",
-        "lib6826_C6VG0ANXX     470106  112019863\n",
-        "lib6827_C6VG0ANXX     431633  102329750\n",
-        "lib6828_C6VG0ANXX     454959  107851056\n",
-        "lib6829_C6VG0ANXX     580928  137696694\n",
-        "lib6830_C6VG0ANXX      24850    6019071\n",
-        "lib6831_C6VG0ANXX     538690  126391434\n",
-        "lib6832_C6VG0ANXX     551447  129841046\n",
-        "lib6833_C6VG0ANXX     577266  135483198\n",
-        "lib6834_C6VG0ANXX     370102   86722915\n",
-        "lib6835_C6VG0ANXX     416677   98175791\n",
-        "lib6836_C6VG0ANXX     392114   92999274\n",
-        "lib6837_C6VG0ANXX     409109   96969784\n",
-        "lib6838_C6VG0ANXX     361544   84941406\n",
-        "lib6839_C6VG0ANXX      23549    5617949\n",
-        "lib6840_C6VG0ANXX     403457   93785356\n",
-        "lib6841_C6VG0ANXX     409904   95580769\n",
-        "lib6842_C6VG0ANXX     396283   92853457\n",
-        "lib6922_C6VG0ANXX     353420   83367653\n",
-        "lib6923_C6VG0ANXX     335966   80291971\n",
-        "lib6924_C6VG0ANXX     443877  105241065\n",
-        "lib6925_C6VG0ANXX     480454  114992576"
+        "'/Volumes/genomics/Illumina/GLOBUS_TESTING_150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_151021/TrimmedFastqs/lib6834_C6VG0ANXX_trimmed.fastq'"
        ]
       }
      ],
-     "prompt_number": 27
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "test_bam = fsc.get_file_list('bam')[0]\n",
-      "test_fasta = fsc.get_file_list('fasta')[0]\n",
-      "test_fastq = fsc.get_file_list('fastq')[0]"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": [],
      "prompt_number": 38
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "def count_bam_records(bam_file):\n",
-      "    bam_records = list(pysam.AlignmentFile(bam_file, 'rb'))\n",
-      "\n",
-      "    return len(bam_records)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 54
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "read_alignments(test_bam)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "175577\n"
-       ]
-      }
-     ],
-     "prompt_number": 55
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "def count_fasta_records(fasta_file):\n",
-      "    handle = open(fasta_file, \"rU\")\n",
-      "    fasta_records = list(SeqIO.parse(handle, \"fasta\"))\n",
-      "    handle.close()\n",
-      "    \n",
-      "    return = len(fasta_records)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 37
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "len(read_fasta(test_fasta))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 39,
-       "text": [
-        "2619"
-       ]
-      }
-     ],
-     "prompt_number": 39
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "def count_fastq_records(fastq_file):\n",
-      "    handle = open(fastq_file, \"rU\")\n",
-      "    fasta_records = list(SeqIO.parse(handle, \"fasta\"))\n",
-      "    handle.close()\n",
-      "\n",
-      "    return len(fasta_records)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     }
    ],
    "metadata": {}
